src/test/ui/hygiene/fields-numeric-borrowck.nll.stderr
error: compilation successful
  --> $DIR/fields-numeric-borrowck.rs:13:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     let mut s = S(0);
LL | |     let borrow1 = &mut s.0;
LL | |     let S { 0: ref mut borrow2 } = s;
LL | |     //~^ ERROR cannot borrow `s.0` as mutable more than once at a time
LL | | }
   | |_^

error: aborting due to previous error

